--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,14 +1,14 @@
 [features]
 seeds = false
-[programs.localnet]
+[programs.devnet]
 wallet_whitelisting_for_minting = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
-cluster = "localnet"
-wallet = "/home/abstracted/.config/solana/id.json"
+cluster = "devnet"
+wallet = "/home/abstracted/solana-wallet/dev1.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
