--- a/programs/wallet_whitelisting_for_minting/Cargo.toml
+++ b/programs/wallet_whitelisting_for_minting/Cargo.toml
@@ -14,9 +14,10 @@ no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
-
 [profile.release]
 overflow-checks = true
 
 [dependencies]
 anchor-lang = { version="0.24.2", features = ["init-if-needed"] }
+strum_macros = "0.24"
+strum = "0.24"
