--- a/programs/wallet_whitelisting_for_minting/Cargo.toml
+++ b/programs/wallet_whitelisting_for_minting/Cargo.toml
@@ -19,5 +19,6 @@ overflow-checks = true
 
 [dependencies]
 anchor-lang = { version="0.24.2", features = ["init-if-needed"] }
-strum_macros = "0.24"
-strum = "0.24"
+proc_macros = {path='../../lib/proc_macros'}
+static_assertions = "1.1.0"
+
